--- a/pom.xml
+++ b/pom.xml
@@ -154,13 +154,16 @@
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-		
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-
 		
+		<!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
 
 		<!-- 외부 라이브러리 추가 -->
-	
 	</dependencies>
 	
 	
